--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">GitHub.com</h1>
-      <h2 class="project-tagline"></h2>
+      <h2 class="project-tagline"><h1>My online resume</h1></h2>
       <a href="https://github.com/zhaili1978/github.com" class="btn">View on GitHub</a>
       <a href="https://github.com/zhaili1978/github.com/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/zhaili1978/github.com/tarball/master" class="btn">Download .tar.gz</a>
